# substreams-waxmarketplaces

./: .gitignore  Cargo.toml  Makefile  README.md  substreams.yaml
abi/: atomicmarket.json
proto/v1/: waxmarketplaces.proto
src/: abi.rs  lib.rs  maps.rs
src/pb/: antelope.waxmarketplaces.v1.rs  mod.rs
